Bug 822698 - Rename GroupSize to GetGroupSize to fix a gcc 4.6 compilation error on Android. r=njn